# sdas8051_cmake

./: CMakeLists.txt  README.md  toolchain-SDCC.cmake
cmake/Compiler/: SDAS8051-ASM.cmake
src/: .cproject  CMakeLists.txt  blink.s
